force-app/main/default/objects/Product_Characteristic__c/Product_Characteristic__c.object-meta.xml
<CustomObject>
    <label>Product_Characteristic</label>
    <nameField>
        <displayFormat>ProdChr-{00000}</displayFormat>
        <label>Product_Characteristic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product_Characteristics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>