force-app/main/default/objects/Product_Characteristic__c/fields/Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Characteristic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Characteristic</label>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Product_Characteristics</relationshipLabel>
    <relationshipName>Product_Characteristics</relationshipName>
    <type>Lookup</type>
</CustomField>