force-app/main/default/objects/Product_Characteristic__c/fields/Characteristic_Key__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_Key__c</fullName>
    <formula>text(Characteristic__r.Characteristic_Key__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Characteristic Key</label>
    <type>Text</type>
</CustomField>