force-app/main/default/objects/Product_Characteristic__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Product_Characteristics</relationshipLabel>
    <relationshipName>Product_Characteristics</relationshipName>
    <type>Lookup</type>
</CustomField>