force-app/main/default/objects/Product_Characteristic__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Product_Characteristics</relationshipLabel>
    <relationshipName>Product_Characteristics</relationshipName>
    <type>Lookup</type>
</CustomField>